--- a/src/components/atoms/Spinner/index.scss
+++ b/src/components/atoms/Spinner/index.scss
@@ -1,19 +1,19 @@
 .aSpinner {
     display: inline-block;
     position: relative;
-    width: 80px;
-    height: 80px;
+    width: 40px;
+    height: 40px;
 
     &__child {
         box-sizing: border-box;
         display: block;
         position: absolute;
-        width: 64px;
-        height: 64px;
+        width: calc(100% - 16px);
+        height: calc(100% - 16px);
         margin: 8px;
         border: 8px solid #fff;
         border-radius: 50%;
-        animation: ring 1.2s cubic-bezier(0.1, 0, 0.1, 1) infinite;
+        animation: ring 1.2s cubic-bezier(0.1, 0.5, 0.1, 0.5) infinite;
         border-color: rgba(0, 0, 0, 0.5) transparent transparent transparent;
     }
 
