--- a/src/components/templates/SearchResultContent/index.scss
+++ b/src/components/templates/SearchResultContent/index.scss
@@ -1,6 +1,13 @@
 .tSearchResultContent {
     min-height: 100vh;
     padding-top: 80px;
+    margin: 0 auto;
+    background-color: rgba(0, 0, 0, 0.1);
+    max-width: 480px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 
     &__loadMore {
         align-items: center;
