fix: back button posititon fixed.

--- a/src/components/templates/ProductDetailContent/index.scss
+++ b/src/components/templates/ProductDetailContent/index.scss
@@ -36,7 +36,7 @@
     }
 
     &__back {
-        position: absolute;
+        position: fixed;
         top: 16px;
         left: 16px;
         font-size: 18px;
